# segmenter_des_clients

./: Marivat_David_1_notebook_script_04_2025.sql  Marivat_David_2_notebook_exploration_04_2025.ipynb  Marivat_David_3_notebook_essais_04_2025.ipynb  Marivat_David_4_notebook_simulation_05_2025.ipynb  Untitled.ipynb  myFonctions.py  pyproject.toml
